fix after review

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -17,6 +17,8 @@
 
         <EditText
             android:id="@+id/editText"
+            android:textColor="?colorOnSecondary"
+            android:textColorHint="?attr/colorOnSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/search_hint"
